# verifywise

./: .dockerignore  .env  .env.dev  .env.prod  .gitignore  ADMIN_EMAIL_SETUP.md  AGENTS.md  AI_DETECTION_PLAN.md  CHANGE_HISTORY_IMPLEMENTATION_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Clean_Architecture.md  DEEPEVAL_BRAINTRUST_COMPLETE.md  DEEPEVAL_BRAINTRUST_REDESIGN.md  DEEPEVAL_BUILD_PROGRESS.md  DEEPEVAL_COMPLETE_SETUP.md  DEEPEVAL_IMPLEMENTATION_SUMMARY.md  DEEPEVAL_SETUP_GUIDE.md  DEEPEVAL_STATUS_AND_NEXT_STEPS.md  DEEPEVAL_UI_REDESIGN_PLAN.md  EVIDENTLY_INTEGRATION_STATUS.md  FLOWGRAM_INTEGRATION_STRATEGY.md  INSTALLATION.md  ISSUE_DEADLINE_WARNING_SYSTEM.md  LICENSE.md  LICENSING-FAQ.md  MODEL_SECURITY_SCANNING_PLAN.md  README.md  SECURITY.md  SQL_Commands.sql  SQL_Commands_1.sql  SQL_Commands_2.sql  TIMESERIES_ANALYTICS_DESIGN.md  VERIFYWISE_CODEBASE_INDEX.md  VERIFYWISE_FEATURES.md  VERIFYWISE_FLOWGRAM_WORKFLOWS_CATALOG.md  VOLTAGENT_USE_CASES.md  VerifyWise_Complete_API.postman_collection.json  agent-plan.md  changes.patch  (+22 more)
BiasAndFairnessModule/: .gitignore  DEEPEVAL_API_PROGRESS.md  DEEPEVAL_COMPLETE.md  DEEPEVAL_FINAL_SUMMARY.md  DEEPEVAL_INTEGRATION_SUMMARY.md  DEEPEVAL_QUICKSTART.md  DEEPEVAL_REFACTORING_SUMMARY.md  DEEPEVAL_STANDALONE.md  DEEPEVAL_USAGE_EXAMPLES.md  Makefile  README.md  check_environment.py  example_usage.py  main.py  pyproject.toml  requirements-dev.txt  requirements-exact.txt  requirements.txt  results.json  run_deepeval_bias_evaluation.py  run_deepeval_evaluation.py  run_full_evaluation.py  run_tests.py  simple_test.py  test_balance_fix.py  test_balance_metrics.py  test_evaluation.py  test_metrics_simple.py
BiasAndFairnessModule/configs/: config.deepeval.yaml  config.yaml
BiasAndFairnessModule/notebooks/: fairness_results_visualizations.ipynb  general_research.ipynb
BiasAndFairnessModule/scripts/: run_complete_evaluation_with_deepeval.sh
BiasAndFairnessModule/src/: __init__.py  cli.py  common.py  config.py  data_loader.py  eval_runner.py  evaluator.py  example_fairness_compass.py  fairness_compass_engine.py  inference.py  metric_registry.py  metrics.py  model_loader.py  postprocessing.py  test_compass_router.py  test_evaluation_module.py  test_fairness_compass_engine.py
BiasAndFairnessModule/src/biasandfairnessmodule.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
BiasAndFairnessModule/src/ce_eval/: runner.py
BiasAndFairnessModule/src/core/: __init__.py  cli.py  common.py  config.py  prompt_config.py
BiasAndFairnessModule/src/dataset_loader/: data_loader.py
BiasAndFairnessModule/src/deepeval_engine/: README.md  deepeval_evaluator.py  model_runner.py
BiasAndFairnessModule/src/eval_engine/: __init__.py  compass_router.py  enhanced_results_processor.py  eval_runner.py  evaluation_module.py  evaluator.py  metric_registry.py  metrics.py  postprocessing.py  results_summarizer.py
BiasAndFairnessModule/src/fairness_eval/: app.py
BiasAndFairnessModule/src/inference/: __init__.py  engine.py  evaluation_runner.py  factory.py  inference.py  inference_pipeline.py
BiasAndFairnessModule/src/model_loader/: __init__.py  model_loader.py
BiasAndFairnessModule/src/prompts/: base.py  chat_openai.py  registry.py  tinyllama.py
BiasAndFairnessModule/src/tests/: __init__.py  example_fairness_compass.py  test_compass_router.py  test_evaluation_module.py  test_fairness_compass_engine.py
BiasAndFairnessModule/src/visualizations/: plots.py
BiasAndFairnessModule/tests/: base_test_metrics.py  test_balance_negative_class.py  test_balance_positive_class.py  test_calibration.py  test_conditional_statistical_parity.py  test_conditional_use_accuracy_equality.py  test_demographic_parity.py  test_equal_selection_parity.py  test_equalized_odds.py  test_equalized_opportunities.py  test_metrics.py  test_predictive_equality.py  test_predictive_parity.py
EvaluationModule/BiasAndFairnessModule/: INSTALLATION.md  README.md  main.py  pyproject.toml  requirements-exact.txt  requirements.txt
EvaluationModule/BiasAndFairnessModule/artifacts/: clean_results.json  cleaned_inference_results.csv  fairness_compass_results.json  inference_results.csv  postprocessed_results.csv
EvaluationModule/BiasAndFairnessModule/src/: __init__.py
EvaluationModule/BiasAndFairnessModule/tests/: base_test_metrics.py  test_calibration.py  test_demographic_parity.py  test_equalized_odds.py
EvaluationModule/llm-leaderboard/: main.py  pyproject.toml
EvaluationModule/llm-leaderboard/apps/: dataset_viewer.py
EvaluationModule/llm-leaderboard/scripts/: dry_run_templates.py  generate_candidates.py  generate_candidates_llm.py  generate_scenarios.py  package_dataset.py  update_manifest_checksums.py  validate_dataset.py  validate_templates.py  verify_checksums.py
GRSModule/: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  viewer.py
GRSModule/configs/: judge_rubric.yaml  models.yaml  mutations.yaml  obligations.yaml
GRSModule/configs/catalogs/: activities.yaml  domains.yaml  industries.yaml  (+3 more)
GRSModule/pages/: 1_Scenario_Inspector.py  GRS_Scenario_Viewer.py
GRSModule/scripts/: export_parquet.py
GRSModule/src/: cli.py  config.py
GRSModule/tests/: test_export_parquet.py  test_validator.py
(+4938 files in other folders)
