[project]
name = "grsmodule"
version = "0.1.0"
description = "Governance Readiness Score scenario generation pipeline"
requires-python = ">=3.12"

dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.scripts]
grs-scenarios = "grs_scenarios.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]