[project]
name = "grsmodule"
version = "0.1.0"
description = "Governance Readiness Score scenario generation pipeline"
requires-python = ">=3.12"

dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rich>=13.7",
  "streamlit>=1.54.0",
]

[project.optional-dependencies]
dev = ["streamlit>=1.40", "pandas>=2.0", "pyarrow>=14.0", "pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
grs-scenarios = "cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
