[project]
name = "biasandfairnessmodule"
version = "0.1.0"
description = "Experimental module for evaluating bias and fairness in Large Language Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aif360>=0.6.1",
    "black>=25.1.0",
    "datasets>=2.18",
    "fairlearn>=0.12.0",
    "flake8>=7.3.0",
    "fsspec>=2024.6.0",
    "huggingface-hub>=0.23",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "kaleido>=1.1.0",
    "langfair>=0.6.7",
    "mypy>=1.16.1",
    "nbformat>=5.10.4",
    "ollama>=0.6.0",
    "plotly>=6.3.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "seaborn>=0.13.2",
    "textblob>=0.19.0",
    "types-pyyaml>=6.0.12.20250516",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
