[project]
name = "llm-leaderboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "jsonschema>=4.26.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "streamlit>=1.53.0",
    "tqdm>=4.67.1",
]
